# WatchTower

./: .dockerignore  .env.ha.primary.example  .env.ha.standby.example  .env.hybrid.primary.example  .env.hybrid.standby.example  .env.mesh.primary.example  .env.mesh.standby.example  .env.watchtower.example  .gitattributes  .gitignore  AUDIT_SUMMARY.md  AUTHORS  BRANCH_PROTECTION.md  BUILD_COMPLETE.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_PAGES_IMPROVEMENTS.md  IMPLEMENTATION_GUIDE.md  LICENSE  LICENSING.md  MANIFEST.in  README.md  RELEASE.md  RELEASE_QUALITY.md  SETUP_RELEASES.md  UX_AUDIT_E2E_REPORT.md  WATCHTOWER_PLATFORM_ROADMAP.md  alembic.ini  apps.json  docker-compose.app.yml  docker-compose.mesh.yml  docker-compose.yml  install_app_center.sh  install_macos.sh  install_windows.ps1  package.json  pyproject.toml  requirements-new.txt  (+6 more)
.github/workflows/: build-desktop-installers.yml  build-vscode-extension.yml  deploy-pages.yml  deploy.yml  preview-image.yml  publish-container.yml  publish-pypi.yml  release.yml  security-scan.yml  windows-ci.yml
Retro UI Project/: PROJECT-STRUCTURE.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
Retro UI Project/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
Retro UI Project/app/[username]/: page.tsx
Retro UI Project/components/: auth-button.tsx  availability-settings-v2.tsx  booking-form.tsx  calendar.tsx  collapsible-settings-section.tsx  copy-link-button.tsx  delete-event-type-button.tsx  edit-event-type-form.tsx  google-calendar-status.tsx  login-form.tsx  new-event-type-form.tsx  time-wheel-picker.tsx  timezone-picker.tsx  username-settings.tsx
Retro UI Project/hooks/: use-mobile.ts
Retro UI Project/scripts/: complete-database-setup.sql
Retro UI Project/types/: index.ts
alembic/: env.py
alembic/versions/: 3603b4e517f3_add_cloudflare_credentials_table.py  4183fe5d8e83_cloudflare_managed_dns_columns_on_.py  49942143a987_align_org_nodes_user_fks_fix_legacy_.py  56523bebd8f2_baseline_schema.py  add_unique_project_name_per_org.py  b0b51b0d29e3_add_github_device_connect_sessions.py  b6f20a66bcc1_add_audit_events_table.py  bcf7346cbb81_add_hot_path_indexes.py  c029f15faa8d_drop_redundant_device_code_index.py  c4e1a3f08217_add_recommended_port_to_projects.py  d8a512c47b3e_add_avatar_url_to_users.py  e7a91c3b04ff_add_build_command_to_projects.py
config/: nodes.json  watchtower.yml
config/caddy/: Caddyfile.mesh
deploy/: README.md  docker-compose.ha.yml  docker-compose.hybrid.yml  docker-compose.mesh.yml  docker-compose.vercel-like.yml
desktop/: main.js  package-lock.json  package.json  preload.js  splash.html
desktop/scripts/: download-nixpacks.py  gen-installer-images.py
docs/: DOMAIN_IMPLEMENTATION_GUIDE.md  EASY_HOME_HOSTING_ROADMAP.md  ENTERPRISE_FEATURES.md  EXAMPLES.md  HA_PODMAN_WATCHTOWER.md  HYBRID_CLOUD_DATABASES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MESH_IMPLEMENTATION_GUIDE.md  PLATFORM_BUILD_SUMMARY.md  QUICK_REFERENCE.md  VERCEL_ALTERNATIVE.md  WATCHTOWER_MESH_VERCEL.md  index.html  viewer.html
install/: README.md  install.sh  install_app_center.sh  install_macos.sh  install_watchtower.sh  install_watchtower_windows.cmd  install_windows.ps1  run_app_center_windows.ps1
pro/: LICENSE  README.md
scripts/: app-down.sh  app-up.sh  bootstrap-watchtower-integrations.sh  build-python-bundle.sh  check-watchtower-app.sh  deploy.sh  dev-down.sh  dev-up.sh  ensure-container-runtime.sh  ha-db-backup.sh  ha-node-up.sh  hybrid-node-up.sh  init-podman-watchtower.sh  install-desktop-shortcut-linux.sh  install-powershell-linux.sh  install-powershell-macos.sh  install-powershell-windows.ps1  install-watchtower-linux-full.sh  join-watchtower-mesh.sh  mesh-bluegreen-deploy.sh  mesh-preview-deploy.sh  preflight.sh  release-setup.sh  release.sh  run-local-app.sh  scan-repo-readability.sh  sync_versions.py  test-cloudflare.sh  verify-release.sh  wt-update.sh
systemd/: watchtower-appcenter.service  watchtower.service
tests/: conftest.py  test_agent.py  test_api_endpoints.py  test_audit.py  test_backup_export.py  test_builder.py  test_builder_uuid_coercion.py  test_canonical_user_id.py  test_config.py  test_deployments_active_count.py  test_failure_analyzer.py  test_github_device_flow.py  test_guest_mode.py  test_health_check.py  test_local_deploy.py  test_local_node_suggest.py  test_local_runner.py  test_logging.py  test_me.py  test_nixpacks_status.py  test_queue.py  test_rate_limit.py  test_recommend_port.py  test_runtime_version.py  test_security_fixes.py  test_spa_security_headers.py  test_templates.py  test_watchtower_service_config.py
vscode-extension/: .vscodeignore  README.md  esbuild.config.cjs  eslint.config.cjs  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: api.ts  extension.ts  logs.ts  treeView.ts  webview.ts
watchtower/: __init__.py  __main__.py  api.py  build_tools.py  builder.py  cli.py  cloudflare_dns.py  config.py  database.py  deploy_server.py  failure_analyzer.py  local_runner.py  log_config.py  logger.py  main.py  package_builder.py  podman_manager.py  queue.py  scheduler.py  schemas.py  schemas_enterprise.py  templates.py  updater.py  worker.py
watchtower/api/: __init__.py  agent.py  audit.py  builds.py  cloudflare.py  deployments.py  edition.py  enterprise.py  envvars.py  local_runs.py  me.py  notifications.py  projects.py  rate_limit.py  runtime.py  setup.py  templates.py  util.py  webhooks.py
web/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.css  App.js  App.tsx  globals.css  index.css  main.tsx
web/src/lib/: api.ts  (+2 more)
(+67 files in other folders)
