[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchtower-podman"
description = "Podman update and multi-node website deployment automation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dynamic = ["version"]
authors = [
  { name = "WatchTower Contributors" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Systems Administration",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS"
]
dependencies = [
  "pyyaml>=6.0",
  "apscheduler>=3.10.0",
  "podman>=4.0.0",
  "requests>=2.28.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "fabric>=3.2.0",
  "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/sinhaankur/WatchTower"
Documentation = "https://sinhaankur.github.io/WatchTower/"
Issues = "https://github.com/sinhaankur/WatchTower/issues"
Source = "https://github.com/sinhaankur/WatchTower"

[project.scripts]
watchtower = "watchtower.cli:main"
watchtower-deploy = "watchtower.deploy_server:main"
watchtower-package = "watchtower.package_builder:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "watchtower.__version__"}

[tool.setuptools.packages.find]
include = ["watchtower*"]
